--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     },
     "require": {
         "php": "^8.1",
-        "codeigniter4/framework": "^4.0"
+        "codeigniter4/framework": "^4.0",
+        "tecnickcom/tcpdf": "^6.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
